--- a/component/i-swiper/i-swiper.wxml
+++ b/component/i-swiper/i-swiper.wxml
@@ -1,9 +1,7 @@
 <view class="swiper-wrap">
   <swiper indicator-dots circular interval="3000" autoplay>
-    <swiper-item wx:for="{{data}}" >
+    <swiper-item wx:for="{{data}}" wx:key="index">
       <image src="{{item.banner_img}}"></image>
     </swiper-item>
   </swiper>
 </view>
-
-
